Feat: Agregamos la imagen hero.jpg

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
     </header>
 
     <nav>
-        <a href="#">Inicio</a>
-        <a href="#"></a>
-        <a href="#"></a>
+        <a href="nosotros.html">Inicio</a>
+        <img src="./freelancer_inicio/hero.jpg" alt="">
     </nav>
 
     <section>
