--- a/index.html
+++ b/index.html
@@ -5,23 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diseñador Freelancer</title>
     <link rel="stylesheet" href="css/normalyze.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Krub:wght@400;700&display=swap" rel="stylesheet">
+    <title>Diseñador Freelancer</title>
+
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
 
     <header>
-        <h1>Farith Eliezer Martinez Flores <span>Freelancer</span></h1>
+        <h1 class="titulo">
+            Farith Eliezer Martinez Flores
+            <span>Freelancer</span>
+        </h1>
     </header>
 
-    <nav>
-        <a href="#">Inicio</a>
-        <a href="#">Sobre Mi</a>
-        <a href="#">Clientes</a>
-        <a href="#">Contacto</a>
-    </nav>
+    <div class="nav-bg">
+        <nav class="navegacion-principal contenedor">
+            <a href="#">Inicio</a>
+            <a href="#">Sobre Mi</a>
+            <a href="#">Clientes</a>
+            <a href="#">Contacto</a>
+        </nav>
+    </div>
 
     <img src="./img/hero.jpg" alt="">
 
