--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
     </div>
 
-    <img src="./img/hero.jpg" alt="">
+    <!-- <img src="./img/hero.jpg" alt=""> -->
 
 
     <section>
