Feature: Terminamos el proyecto FREELANCER de Udemy

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <!--.servicios-->
 
 
-        <section>
+        <section class="contacto">
             <h2>Contacto</h2>
             <form class="formulario">
                 <fieldset>
@@ -166,13 +166,14 @@
                         <input class="boton w-100" type="submit" value="Enviar">
                     </div>
 
-
                 </fieldset>
+
+
             </form>
         </section>
     </main>
 
-    <footer>
+    <footer class="footer">
         <p>Todos los derechos reservados - Farith Eliézer Martinez Flores</p>
     </footer>
 
